// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageDetailsHeader component should match the snapshot with a valid thirdPartySenderDenomination 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          [
            {
              "zIndex": 1,
            },
            false,
          ]
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                [
                  {
                    "flex": 1,
                    "shadowOffset": {
                      "height": 0.5,
                      "width": 0,
                    },
                    "shadowOpacity": 0.85,
                    "shadowRadius": 0,
                  },
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderBottomColor": "rgb(216, 216, 216)",
                    "shadowColor": "rgb(216, 216, 216)",
                  },
                  [
                    {},
                    false,
                  ],
                ]
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              [
                {
                  "height": 44,
                  "maxHeight": undefined,
                  "minHeight": undefined,
                  "opacity": undefined,
                  "transform": undefined,
                },
              ]
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    [
                      {
                        "fontSize": 17,
                        "fontWeight": "600",
                      },
                      {
                        "color": "rgb(28, 28, 30)",
                      },
                      undefined,
                    ]
                  }
                >
                  MESSAGE_DETAIL
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents={
            [
              1,
            ]
          }
          sheetCornerRadius={-1}
          sheetElevation={24}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetInitialDetent={0}
          sheetLargestUndimmedDetent={-1}
          style={
            [
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "zIndex": undefined,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                [
                  {
                    "flex": 1,
                  },
                  undefined,
                  null,
                ]
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "display": "flex",
                            "flexDirection": "column",
                            "gap": 8,
                          }
                        }
                      >
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "flexWrap": "wrap",
                              "gap": 8,
                              "justifyContent": "flex-start",
                            }
                          }
                        />
                        <View
                          style={
                            {
                              "display": "flex",
                              "flexDirection": "column",
                              "gap": 8,
                            }
                          }
                        >
                          <Text
                            accessibilityRole="header"
                            allowFontScaling={true}
                            dynamicTypeRamp="title2"
                            maxFontSizeMultiplier={1.5}
                            style={
                              [
                                {},
                                {
                                  "color": "#0E0F13",
                                  "fontFamily": "Titillio",
                                  "fontSize": 22,
                                  "fontStyle": "normal",
                                  "fontWeight": "600",
                                  "lineHeight": 33,
                                },
                              ]
                            }
                            testID="message-header-subject"
                          >
                            #### Subject ####
                          </Text>
                          <Text
                            allowFontScaling={true}
                            dynamicTypeRamp="footnote"
                            maxFontSizeMultiplier={1.5}
                            style={
                              [
                                {},
                                {
                                  "color": "#555C70",
                                  "fontFamily": "Titillio",
                                  "fontSize": 14,
                                  "fontStyle": "normal",
                                  "fontWeight": "400",
                                  "lineHeight": 21,
                                },
                              ]
                            }
                          >
                            18 ott 2021, 16:00
                          </Text>
                        </View>
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "borderBottomWidth": 0.5,
                                "borderTopWidth": 0.5,
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                                "paddingVertical": 6,
                              },
                              {
                                "borderColor": "#D2D6E3",
                              },
                            ]
                          }
                          testID="organization-header"
                        >
                          <View
                            style={
                              {
                                "flex": 1,
                              }
                            }
                          >
                            <Text
                              allowFontScaling={true}
                              dynamicTypeRamp="footnote"
                              maxFontSizeMultiplier={1.5}
                              style={
                                [
                                  {},
                                  {
                                    "color": "#0E0F13",
                                    "fontFamily": "Titillio",
                                    "fontSize": 14,
                                    "fontStyle": "normal",
                                    "fontWeight": "400",
                                    "lineHeight": 21,
                                  },
                                ]
                              }
                              testID="org-name-aar"
                            >
                              DENOMINATION
                              <Text
                                allowFontScaling={true}
                                dynamicTypeRamp="footnote"
                                maxFontSizeMultiplier={1.5}
                                style={
                                  [
                                    {},
                                    {
                                      "color": "#555C70",
                                      "fontFamily": "Titillio",
                                      "fontSize": 14,
                                      "fontStyle": "normal",
                                      "fontWeight": "400",
                                      "lineHeight": 21,
                                    },
                                  ]
                                }
                              >
                                 tramite
                              </Text>
                            </Text>
                            <View
                              accessibilityRole="button"
                              accessibilityState={
                                {
                                  "busy": undefined,
                                  "checked": undefined,
                                  "disabled": undefined,
                                  "expanded": undefined,
                                  "selected": undefined,
                                }
                              }
                              accessibilityValue={
                                {
                                  "max": undefined,
                                  "min": undefined,
                                  "now": undefined,
                                  "text": undefined,
                                }
                              }
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                            >
                              <Text
                                accessibilityRole="button"
                                allowFontScaling={true}
                                dynamicTypeRamp="footnote"
                                maxFontSizeMultiplier={1.5}
                                style={
                                  [
                                    {
                                      "textDecorationLine": "none",
                                    },
                                    {
                                      "color": "#0B3EE3",
                                      "fontFamily": "Titillio",
                                      "fontSize": 14,
                                      "fontStyle": "normal",
                                      "fontWeight": "600",
                                      "lineHeight": 21,
                                    },
                                  ]
                                }
                              >
                                health
                              </Text>
                            </View>
                          </View>
                          <View>
                            <View
                              accessibilityIgnoresInvertColors={true}
                              style={
                                [
                                  {
                                    "borderColor": "rgba(14,15,19,0.1)",
                                    "borderCurve": "continuous",
                                    "borderWidth": 1,
                                    "overflow": "hidden",
                                  },
                                  {
                                    "backgroundColor": "#FFFFFF",
                                    "borderRadius": 8,
                                    "height": 44,
                                    "padding": 6,
                                    "width": 44,
                                  },
                                ]
                              }
                            >
                              <View
                                style={
                                  [
                                    {
                                      "backgroundColor": "#FFFFFF",
                                      "borderCurve": "continuous",
                                      "overflow": "hidden",
                                    },
                                    {
                                      "borderRadius": 2,
                                    },
                                  ]
                                }
                              >
                                <Image
                                  accessibilityIgnoresInvertColors={true}
                                  onError={[Function]}
                                  source={
                                    [
                                      {
                                        "height": 180,
                                        "uri": "https://assets.cdn.io.pagopa.it/logos/services/service_one.png",
                                        "width": 180,
                                      },
                                      {
                                        "height": 180,
                                        "uri": "https://assets.cdn.io.pagopa.it/logos/organizations/FSCLCD.png",
                                        "width": 180,
                                      },
                                    ]
                                  }
                                  style={
                                    {
                                      "height": "100%",
                                      "resizeMode": "contain",
                                      "width": "100%",
                                    }
                                  }
                                />
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`MessageDetailsHeader component should match the snapshot with default props 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          [
            {
              "zIndex": 1,
            },
            false,
          ]
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          onLayout={[Function]}
          pointerEvents="box-none"
          style={null}
        >
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              {
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 0,
              }
            }
          >
            <View
              collapsable={false}
              style={
                [
                  {
                    "flex": 1,
                    "shadowOffset": {
                      "height": 0.5,
                      "width": 0,
                    },
                    "shadowOpacity": 0.85,
                    "shadowRadius": 0,
                  },
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderBottomColor": "rgb(216, 216, 216)",
                    "shadowColor": "rgb(216, 216, 216)",
                  },
                  [
                    {},
                    false,
                  ],
                ]
              }
            />
          </View>
          <View
            collapsable={false}
            pointerEvents="box-none"
            style={
              [
                {
                  "height": 44,
                  "maxHeight": undefined,
                  "minHeight": undefined,
                  "opacity": undefined,
                  "transform": undefined,
                },
              ]
            }
          >
            <View
              pointerEvents="none"
              style={
                {
                  "height": 0,
                }
              }
            />
            <View
              pointerEvents="box-none"
              style={
                {
                  "alignItems": "stretch",
                  "flex": 1,
                  "flexDirection": "row",
                }
              }
            >
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-start",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginStart": 0,
                    "opacity": 1,
                  }
                }
              />
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "justifyContent": "center",
                    "marginHorizontal": 16,
                    "maxWidth": 718,
                    "opacity": 1,
                  }
                }
              >
                <Text
                  accessibilityRole="header"
                  aria-level="1"
                  collapsable={false}
                  numberOfLines={1}
                  onLayout={[Function]}
                  style={
                    [
                      {
                        "fontSize": 17,
                        "fontWeight": "600",
                      },
                      {
                        "color": "rgb(28, 28, 30)",
                      },
                      undefined,
                    ]
                  }
                >
                  MESSAGE_DETAIL
                </Text>
              </View>
              <View
                collapsable={false}
                pointerEvents="box-none"
                style={
                  {
                    "alignItems": "flex-end",
                    "flexBasis": 0,
                    "flexGrow": 1,
                    "justifyContent": "center",
                    "marginEnd": 0,
                    "opacity": 1,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents={
            [
              1,
            ]
          }
          sheetCornerRadius={-1}
          sheetElevation={24}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetInitialDetent={0}
          sheetLargestUndimmedDetent={-1}
          style={
            [
              {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              {
                "zIndex": undefined,
              },
            ]
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                [
                  {
                    "flex": 1,
                  },
                  undefined,
                  null,
                ]
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={-1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <View
                        style={
                          {
                            "display": "flex",
                            "flexDirection": "column",
                            "gap": 8,
                          }
                        }
                      >
                        <View
                          style={
                            {
                              "alignItems": "center",
                              "flexDirection": "row",
                              "flexWrap": "wrap",
                              "gap": 8,
                              "justifyContent": "flex-start",
                            }
                          }
                        />
                        <View
                          style={
                            {
                              "display": "flex",
                              "flexDirection": "column",
                              "gap": 8,
                            }
                          }
                        >
                          <Text
                            accessibilityRole="header"
                            allowFontScaling={true}
                            dynamicTypeRamp="title2"
                            maxFontSizeMultiplier={1.5}
                            style={
                              [
                                {},
                                {
                                  "color": "#0E0F13",
                                  "fontFamily": "Titillio",
                                  "fontSize": 22,
                                  "fontStyle": "normal",
                                  "fontWeight": "600",
                                  "lineHeight": 33,
                                },
                              ]
                            }
                            testID="message-header-subject"
                          >
                            #### Subject ####
                          </Text>
                          <Text
                            allowFontScaling={true}
                            dynamicTypeRamp="footnote"
                            maxFontSizeMultiplier={1.5}
                            style={
                              [
                                {},
                                {
                                  "color": "#555C70",
                                  "fontFamily": "Titillio",
                                  "fontSize": 14,
                                  "fontStyle": "normal",
                                  "fontWeight": "400",
                                  "lineHeight": 21,
                                },
                              ]
                            }
                          >
                            18 ott 2021, 16:00
                          </Text>
                        </View>
                        <View
                          style={
                            [
                              {
                                "alignItems": "center",
                                "borderBottomWidth": 0.5,
                                "borderTopWidth": 0.5,
                                "flexDirection": "row",
                                "justifyContent": "space-between",
                                "paddingVertical": 6,
                              },
                              {
                                "borderColor": "#D2D6E3",
                              },
                            ]
                          }
                          testID="organization-header"
                        >
                          <View
                            style={
                              {
                                "flex": 1,
                              }
                            }
                          >
                            <Text
                              allowFontScaling={true}
                              dynamicTypeRamp="body"
                              maxFontSizeMultiplier={1.5}
                              style={
                                [
                                  {},
                                  {
                                    "color": "#555C70",
                                    "fontFamily": "Titillio",
                                    "fontSize": 16,
                                    "fontStyle": "normal",
                                    "fontWeight": "600",
                                    "lineHeight": 24,
                                  },
                                ]
                              }
                              testID="org-name"
                            >
                              Ċentru tas-Saħħa
                            </Text>
                            <View
                              accessibilityRole="button"
                              accessibilityState={
                                {
                                  "busy": undefined,
                                  "checked": undefined,
                                  "disabled": undefined,
                                  "expanded": undefined,
                                  "selected": undefined,
                                }
                              }
                              accessibilityValue={
                                {
                                  "max": undefined,
                                  "min": undefined,
                                  "now": undefined,
                                  "text": undefined,
                                }
                              }
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                            >
                              <Text
                                accessibilityRole="button"
                                allowFontScaling={true}
                                dynamicTypeRamp="footnote"
                                maxFontSizeMultiplier={1.5}
                                style={
                                  [
                                    {
                                      "textDecorationLine": "none",
                                    },
                                    {
                                      "color": "#0B3EE3",
                                      "fontFamily": "Titillio",
                                      "fontSize": 14,
                                      "fontStyle": "normal",
                                      "fontWeight": "600",
                                      "lineHeight": 21,
                                    },
                                  ]
                                }
                              >
                                health
                              </Text>
                            </View>
                          </View>
                          <View>
                            <View
                              accessibilityIgnoresInvertColors={true}
                              style={
                                [
                                  {
                                    "borderColor": "rgba(14,15,19,0.1)",
                                    "borderCurve": "continuous",
                                    "borderWidth": 1,
                                    "overflow": "hidden",
                                  },
                                  {
                                    "backgroundColor": "#FFFFFF",
                                    "borderRadius": 8,
                                    "height": 44,
                                    "padding": 6,
                                    "width": 44,
                                  },
                                ]
                              }
                            >
                              <View
                                style={
                                  [
                                    {
                                      "backgroundColor": "#FFFFFF",
                                      "borderCurve": "continuous",
                                      "overflow": "hidden",
                                    },
                                    {
                                      "borderRadius": 2,
                                    },
                                  ]
                                }
                              >
                                <Image
                                  accessibilityIgnoresInvertColors={true}
                                  onError={[Function]}
                                  source={
                                    [
                                      {
                                        "height": 180,
                                        "uri": "https://assets.cdn.io.pagopa.it/logos/services/service_one.png",
                                        "width": 180,
                                      },
                                      {
                                        "height": 180,
                                        "uri": "https://assets.cdn.io.pagopa.it/logos/organizations/FSCLCD.png",
                                        "width": 180,
                                      },
                                    ]
                                  }
                                  style={
                                    {
                                      "height": "100%",
                                      "resizeMode": "contain",
                                      "width": "100%",
                                    }
                                  }
                                />
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
